test/parser/exercise/struct_instantiation_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct Color {
    r: number,
    g: number,
    b: number,
}

fn main(): unit {
    let err = Color {
        r: 0, 
        +,
        // CHECK: [[# @LINE -1 ]]:9: error: expected field initialization
        b: 2,
    };

    let x = 1;
}
// CHECK: StructDecl: Color
// CHECK-NEXT:   FieldDecl: r
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   FieldDecl: g
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT:   FieldDecl: b
// CHECK-NEXT:     BuiltinType: number
// CHECK-NEXT: FunctionDecl: main
// CHECK-NEXT:   BuiltinType: unit
// CHECK-NEXT:   Block
// CHECK-NEXT:     DeclStmt:
// CHECK-NEXT:       VarDecl: x
// CHECK-NEXT:         NumberLiteral: '1'
// CHECK-NOT: {{.*}}
